# coverup

./: .gitignore  README.md  coverall.py  coverup.py  pyproject.toml  requirements.txt  setup.py  test-modules.txt  test_utils.py
.github/workflows/: build-and-upload.yml  tests.yml
src/: .gitignore
src/coverup/: .coverup.py.swp  .llm.py.swp  __init__.py  __main__.py  codeinfo.py  coverup.py  delta.py  llm.py  logreader.py  prompt.py  pytest_plugin.py  segment.py  testrunner.py  utils.py
src/coverup/prompt/: claude.py  gpt_v1.py  gpt_v2.py  gpt_v2_ablated.py  gpt_v2_fully_ablated.py  gpt_v2_no_coverage.py  gpt_v2_no_coverage_no_function.py  prompter.py
tests/: somecode.py  test_claude_coverup_1.py  test_claude_coverup_2.py  test_claude_coverup_3.py  test_claude_coverup_4.py  test_claude_coverup_5.py  test_claude_coverup_6.py  test_claude_coverup_7.py  test_claude_coverup_8.py  test_claude_coverup_9.py  test_codeinfo.py  test_coverup.py  test_coverup_1.py  test_coverup_10.py  test_coverup_11.py  test_coverup_12.py  test_coverup_13.py  test_coverup_14.py  test_coverup_15.py  test_coverup_16.py  test_coverup_17.py  test_coverup_18.py  test_coverup_19.py  test_coverup_2.py  test_coverup_20.py  test_coverup_21.py  test_coverup_22.py  test_coverup_23.py  test_coverup_24.py  test_coverup_25.py  test_coverup_26.py  test_coverup_3.py  test_coverup_4.py  test_coverup_5.py  test_coverup_6.py  test_coverup_7.py  test_coverup_8.py  test_coverup_9.py  test_delta.py  test_do_chat.py  (+33 more)
